--- a/Gallo Pinto Recipe.html
+++ b/Gallo Pinto Recipe.html
@@ -11,29 +11,6 @@
   <link rel="stylesheet" href="normcss.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
-<!-- nav  -->
-  <nav class="navbar">
-    <div class="nav-center">
-      <div class="nav-header">
-        <a href="index.html" class="Logo">
-          <img src="Images/logo.webp" alt="healthy food" />
-        </a>
-        <button class="nav-btn btn">
-          <i class="fas fa-align-justify"></i>
-        </button>
-      </div>
-      <div class="nav-links">
-        <a href="index.html" class="nav-link"> home </a>
-        <a href="about.html" class="nav-link"> about </a>
-        <a href="recipes.html" class="nav-link"> recipes </a>
-
-        <div class="nav-link contact-link">
-          <a href="contact.html" class="btn"> contact </a>
-        </div>
-      </div>
-    </div>
-  </nav>
-  <!-- end of nav -->
 <body>
   <!-- nav  -->
   <nav class="navbar">
@@ -171,5 +148,13 @@
         </section>
       </div>
     </main>
+   <!-- footer -->
+   <footer class="page-footer">
+    <p>
+       &copy; <span id="date"></span>
+       <span class="footer-logo">Healthy recipes</span> 
+       <a href="https://www.skinnytaste.com/">Inspired from</a>
+    </p>
+ </footer>
 </body>
 </html>
